--- a/emulator/public_html/index.html
+++ b/emulator/public_html/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
+This file is the main file that run the emulator
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Emulator</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="styling.css">
     </head>
     <body>
-        <div>TODO write content</div>
+        <h1> LCC Smartwatch Emulator</h1>
+        <canvas id="emulatorCanvas" style="border:1px solid #000000;">
+        </canvas>
     </body>
 </html>
