Added selection element to the emulator

--- a/emulator/public_html/index.html
+++ b/emulator/public_html/index.html
@@ -13,5 +13,11 @@ This file is the main file that run the emulator
         <h1> LCC Smartwatch Emulator</h1>
         <canvas id="emulatorCanvas" style="border:1px solid #000000;">
         </canvas>
+        
+            <select id = "AppSelection"> 
+            <option value="testing">Testing</option>
+            <option value="health">Health App</option>
+            </select>
+        
     </body>
 </html>
