Able to add images onto canvas

--- a/emulator/public_html/index.html
+++ b/emulator/public_html/index.html
@@ -14,12 +14,13 @@ This file is the main file that run the emulator
         <h1> LCC Smartwatch Emulator</h1>
         
         <canvas id="emulatorCanvas" style="border:1px solid #000000;">
+            Your browser does not support the HTML5 canvas tag.
         </canvas>
         
         <div style="color:white" id='monitor' >
             <select id = "AppSelection"> 
-                <option value="testing">Testing</option>
-                <option value="health">Health App</option>
+                <option value="Test.js">Testing</option>
+                <option value="health.js">Health App</option>
             </select>
             <button type="button" id='load'>Load</button><br>
             <textarea disabled id='text' rows="4" cols="50"></textarea>
