Put health stufs into one folder

--- a/emulator/public_html/index.html
+++ b/emulator/public_html/index.html
@@ -23,7 +23,7 @@ This file is the main file that run the emulator
         <div style="color:white" id='monitor' >
             <select id = "AppSelection"> 
                 <option value="Test.js">Testing</option>
-                <option value="health.js">Health App</option>
+                <option value="HealthApp/health.js">Health App</option>
                 <option value="clock.js">clock</option>
             </select>
             <button type="button" id='load'>Load</button>
