--- a/emulator/public_html/index.html
+++ b/emulator/public_html/index.html
@@ -7,7 +7,7 @@ This file is the main file that run the emulator
         <title>Emulator</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="styling.css">
+        <link rel="stylesheet" type="text/css" href="CSS/styling.css">
     </head>
     <body>
 
