Made a new healthAppindex.html for running health app

--- a/emulator/public_html/HealthApp/HealthIndex.html
+++ b/emulator/public_html/HealthApp/HealthIndex.html
@@ -7,7 +7,7 @@ This file is the main file that run the emulator
         <title>Emulator</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="CSS/styling.css">
+        <link rel="stylesheet" type="text/css" href="../CSS/styling.css">
     </head>
     <body>
 
@@ -21,9 +21,9 @@ This file is the main file that run the emulator
             <button type="button" id='homebutton'></button>
         <div style="color:white" id='monitor' >
             <select id = "AppSelection"> 
-                <option value="Test.js">Testing</option>
-                <option value="HealthApp/health.js">Health App</option>
-                <option value="clock.js">clock</option>
+                <option value="../Test.js">Testing</option>
+                <option value="health.js">Health App</option>
+                <option value="../clock.js">clock</option>
             </select>
             <button type="button" id='load'>Load</button>
             <input type="button" id="clear" value="Clear"><br>
@@ -32,7 +32,7 @@ This file is the main file that run the emulator
 
         <script type="text/javascript"
         src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-        <script type="text/javascript" src="emulatorForm.js"></script>
+        <script type="text/javascript" src="../emulatorForm.js"></script>
         <script type="text/javascript" src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
         <script>
             // this is for the clear button, clearing the canvans
