--- a/emulator/public_html/index.html
+++ b/emulator/public_html/index.html
@@ -34,6 +34,7 @@ This file is the main file that run the emulator
         <script type="text/javascript"
         src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script type="text/javascript" src="emulatorForm.js"></script>
+        <script src="https://maps.googleapis.com/maps/api/js"></script>
         <script type="text/javascript" src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
         <script>
             // this is for the clear button, clearing the canvans
