--- a/emulator/public_html/index.html
+++ b/emulator/public_html/index.html
@@ -1,52 +1,35 @@
-
-       <!--
-This file is the main file that run the emulator
+<!DOCTYPE html>
+<!--
+Main page
 -->
 <html>
     <head>
-        <title>Emulator</title>
+        <title>Documentation</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="CSS/styling.css">
-        <script type="text/javascript" src="paperjs-v0.9.22/dist/paper-full.min.js"></script>
-<!-- Define inlined JavaScript -->
+        <link rel="stylesheet" type="text/css" href="CSS/typography.css">
+         <link rel="stylesheet" type="text/css" href="CSS/grid.css">
     </head>
     <body>
+        <div class="container">
 
-        <h1 id="title1" class="gwd-h1-l9vh gwd-h1-k5vu">
-            LCC Smartwatch Emulator
-        </h1>
-        <img class="gwd-img-8g82" id="smartwatch" src="watch-6.png">
-        <canvas width="207" height="210" class="gwd-canvas-ot0t" id="emulatorCanvas"></canvas>
+            <h1 id="title" class="alt">LCC Documentation</h1>
+            <hr class="space">
+            <div class="span-15 prepend-1 colborder">
+                <p><b>Members:</b><br>
+                    Chontira Nimcharoen(9546406)<br>
+                    Linlin Wang(914328)<br>
+                    Cameron Wilkinson(1174186)
+                </p><hr> 
+                The report template is from: <a href="http://www.blueprintcss.org/tests/">Blueprint</a>
+                <div class="span-7 last">
+                    <a href="/emulator/EmulatorDoc.html">Emulator Manual</a><br>
+                    <a href="/emulator/healthAppDoc.html">Application Manual</a><br>
+                    <a href="/emulator/Setup.html">Emulator</a><br>
+                </div>
 
-        <div style="color:white" id='monitor' >
-            <select id = "AppSelection"> 
-                <option value="Test.js">Testing</option>
-                <option value="HealthApp/health.js">Health App</option>
-                <option value="clock.js">clock</option>
-            </select>
-            <button type="button" id='load'>Load</button>
-            <input type="button" id="clear" value="Clear"><br>
-            <textarea disabled id='text' rows="4" cols="50"></textarea>
+                
+            </div>
         </div>
-        <div id="heartrate"></div>
-
-        <script type="text/javascript"
-        src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-        <script type="text/javascript" src="emulatorForm.js"></script>
-        <script src="https://maps.googleapis.com/maps/api/js"></script>
-        <script type="text/javascript" src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
-        <script>
-            // this is for the clear button, clearing the canvans
-            var canvas = document.getElementById("emulatorCanvas");
-            var ctx = canvas.getContext("2d");
-            document.getElementById('clear').addEventListener('click', function () {
-                ctx.clearRect(0, 0, canvas.width, canvas.height);
-                ctx.restore();
-                location.reload();
-            }, false);
-        </script>
-
-
     </body>
 </html>
