Added report to the repository

--- a/emulator/public_html/Setup.html
+++ b/emulator/public_html/Setup.html
@@ -9,6 +9,8 @@ This file is the main file that run the emulator
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="CSS/styling.css">
         <script type="text/javascript" src="paperjs-v0.9.22/dist/paper-full.min.js"></script>
+         <link rel="stylesheet" type="text/css" href="CSS/typography.css">
+         <link rel="stylesheet" type="text/css" href="CSS/grid.css">
 <!-- Define inlined JavaScript -->
     </head>
     <body>
