--- a/emulator/public_html/index.html
+++ b/emulator/public_html/index.html
@@ -25,6 +25,7 @@ Main page
                 <div class="span-7 last">
                     <a href="/emulator/EmulatorDoc.html">Emulator Manual</a><br>
                     <a href="/emulator/healthAppDoc.html">Application Manual</a><br>
+                    <a href="/emulator/report.html">Report</a><br>
                     <a href="/emulator/Setup.html">Emulator</a><br>
                 </div>
 
