Added the medicine notification option to the emulator

--- a/emulator/public_html/Setup.html
+++ b/emulator/public_html/Setup.html
@@ -26,6 +26,7 @@ This file is the main file that run the emulator
                 <option value="Test.js">Testing</option>
                 <option value="HealthApp/health.js">Health App</option>
                 <option value="clock.js">clock</option>
+                <option value="HealthApp/medicine/medicine.js">Medicine</option>
             </select>
             <button type="button" id='load'>Load</button>
             <input type="button" id="clear" value="Clear"><br>
