--- a/emulator/public_html/HealthApp/medicine/TestNotification.html
+++ b/emulator/public_html/HealthApp/medicine/TestNotification.html
@@ -1,3 +1,5 @@
+<!-- This file is for trial and error purposes so please ignore.
+
 <!DOCTYPE html>
 <html>
 <body>
@@ -42,12 +44,6 @@
 
 <!--
 <script>
-    
-    var text = '{"employees":[' +
-'{"firstName":"John","lastName":"Doe" },' +
-'{"firstName":"Anna","lastName":"Smith" },' +
-'{"firstName":"Peter","lastName":"Jones" }]}';
-    
 var text = '{"medicine":[' +
  '{"name":"Levothyroxine",
      "dosage":"150mg daily",
@@ -70,6 +66,6 @@ obj.medicine[1].name + "<br>" +
 obj.medicine[1].dosage + "<br>" +
 obj.medicine[1].practice;
 </script>
--->
 </body>
 </html>
+-->
