Added report-1 to the mix and modified some files

--- a/emulator/public_html/healthAppDoc.html
+++ b/emulator/public_html/healthAppDoc.html
@@ -15,7 +15,19 @@ Application manual
             <h1 id="hearder">LCC Health Manual</h1>
             <hr>
             <div class='span-15 prepend-1 colborder'>
-            <p>At the moment, all this app is doing is displaying sequences of number from 1 to 200
+            <p>Heart rate monitor user manual:
+
+5.1 million People in the United States have been diagnosed with cardiac conditions, with a far larger number remaining undiagnosed.
+Many of these conditions have characteristic symptoms leading up to heart failure,
+for example in cardiac hypertension the patient’s heart rate will be extremely elevated for up to a day before heart failure occurs.
+Therefore constant recording and monitoring of heart rate in such patients could save lives.
+That is where the LCC Health Heart Rate Monitor comes in. The LCC Health Heart Rate Monitor utilise the componentry of the new generation of smart watches to continuously monitor heart rate and alert the wearer to dangerous variations in their cardiac condition.
+The base model is capable of detecting on coming heart failure due to cardiac arrest, via detection of pulsatile decreases in heart rate over a few minutes, giving the wearer time to seek help. The base model is also alerts the wearer when their heart rate exceeds average maximum heart rate as defined by the National Heart 
+Foundation, a very useful alert for those at risk of pulmonary heart failure caused by overexertion, a killer of many elderly people.
+The LCC Health Heart Rate Monitor works by measuring pulse at the wrist, an accurate and non-invasive way of measuring heart rate. This data is recorded and fed to the display on the watch. 
+If the values fall into one of the preprogramed ‘danger’ zones then an alert is sent to the watch alerting the wearer, allowing them to take appropriate action. In cardiac emergencies a couple of minutes can be the difference between life and death, the LCC Health Heart Rate Monitor aims to maximise reaction time and help curb the ever increasing number of fatalities caused by heart failure every year.<br><br>
+
+                At the moment, all this app is doing is displaying sequences of number from 1 to 200
                 with caption that said 'Heart Rate'. If the number displays something less than 50 or greater than 200,
                 a message will pop up that said 'Emergency, call 111 immediately'.<br>
             
