--- a/emulator/public_html/index.html
+++ b/emulator/public_html/index.html
@@ -26,6 +26,7 @@ Main page
                     <a href="/emulator/EmulatorDoc.html">Emulator Manual</a><br>
                     <a href="/emulator/healthAppDoc.html">Application Manual</a><br>
                     <a href="/emulator/report.html">Report</a><br>
+                    <a href="/emulator/report_1.html">Report for assignment 3</a><br>
                     <a href="/emulator/Setup.html">Emulator</a><br>
                 </div>
 
