--- a/emulator/public_html/Setup.html
+++ b/emulator/public_html/Setup.html
@@ -38,6 +38,8 @@ This file is the main file that run the emulator
         src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script type="text/javascript" src="emulatorForm.js"></script>
         <script src="https://maps.googleapis.com/maps/api/js"></script>
+        
+        <script type="text/javascript" src="HealthApp/medicine/data.json"></script>
         <script type="text/javascript" src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
         <script>
             // this is for the clear button, clearing the canvans
